@@ -360,6 +360,8 @@ See the 'vc-faces' customization group.
 
 * New Modes and Packages in Emacs 25.2
 
+** New Elisp data-structure library `radix-tree'.
+
 
 * Incompatible Lisp Changes in Emacs 25.2
 
